<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="email_hint">Masukkan Email</string>
    <string name="email_error_blank">Email tidak boleh kosong</string>
    <string name="email_error_invalid">Email yang anda masukkan tidak valid</string>
    <string name="hint_password">Masukkan Password</string>
    <string name="error_empty_password">Password tidak boleh kosong</string>
    <string name="error_password_too_short">Password yang anda masukkan kurang dari 8 karakter!</string>
    <string name="name_hint">Masukkan nama</string>
    <string name="name_error_blank">Nama tidak boleh kosong</string>
    <string name="title_login">LOGIN</string>
    <string name="title_register">REGISTER</string>
    <string name="sambutan_login">Selamat Datang! Silahkan login terlebih dahulu sebelum mengabadikan moment mu</string>
    <string name="sambutan_register">Segera daftarkan akunmu agar kamu bisa mengabadikan semua momentmu disni</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dontHaveAccount">Belum mempunyai akun?</string>
    <string name="register">Daftar</string>
    <string name="name">Nama</string>
    <string name="login_success">Selamat Anda Berhasil Login</string>
    <string name="login_error">Error! Silahkan login kembali</string>
    <string name="register_success">Register Berhasil</string>
    <string name="register_error">Register Gagal! Silahkan coba kembali</string>
    <string name="haveAccount">Sudah punya akun?</string>
    <string name="login">Login</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="add_story">Tambah Story</string>
    <string name="error_message">Tidak dapat menemukan story</string>
    <string name="logout">Log Out</string>
    <string name="detail_photo">Detail Photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Galery</string>
    <string name="input_description">Input Deskripsi</string>
    <string name="upload">Upload</string>
    <string name="story_uploaded">Story Berhasil Diupload</string>
    <string name="error_upload_story">Story Gagal Diupload</string>
    <string name="permissions_not_granted">Gagal Mendapatkan Permission</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="maps">Maps</string>
    <string name="error_maps">Maps Tidak Ditemukan</string>
    <string name="retry">Coba Ulang</string>
    <string name="use_current_location">Gunakan Lokasi Saat Ini</string>
    <string name="permission_title">Izin Penggunaan Lokasi</string>
    <string name="permission_message">Memerlukan Izin Mengakses Lokasi</string>
    <string name="ok">OKE</string>
</resources>